--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <!-- Main CSS -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="Css/styles.css">
 
   <script>
     // Update WhatsApp link dynamically with selected size
@@ -152,4 +152,5 @@
 <!-- Floating WhatsApp Button -->
 <a href="https://wa.me/254770490942" id="floating-whatsapp">Book on WhatsApp</a>
 </body>
+
 </html>
