Correct CSS file path in contact.html
Fixed the path of the main CSS file from 'css/styles.css' to 'Css/styles.css'.

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <!-- Main CSS -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="Css/styles.css">
 </head>
 <body>
 
@@ -142,4 +142,5 @@
 <!-- Floating WhatsApp Button -->
 <a href="https://wa.me/254770490942" id="floating-whatsapp">Book on WhatsApp</a>
 </body>
+
 </html>
